--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/mayur.mmallya/"
+  facebook         : "mayur.mmallya/"
   foursquare       :
   github           : "mayurmallya"
   google_plus      :
@@ -102,10 +102,10 @@ author:
   instagram        :
   impactstory      : # "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/mayur-m-mallya-695a7915b/"
+  linkedin         : "mayur-m-mallya-695a7915b/"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
-  quora            : "https://www.quora.com/profile/Mayur-M-Mallya"
+  #quora            : "https://www.quora.com/profile/Mayur-M-Mallya"
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
