--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mayur Mallya"
-  avatar           : "profile.png"
+  avatar           : "pp.jpeg" #"profile.png"
   bio              : "Graduate Research student at Medical Image Analysis Lab at Simon Fraser University"
   location         : "Metro Vancouver"
   employer         :
