--- a/_config.yml
+++ b/_config.yml
@@ -177,16 +177,16 @@ kramdown:
 # Collections
 collections:
   teaching:
-    output: false #true
+    output: true
     permalink: /:collection/:path/
   publications:
-    output: false #true
+    output: true
     permalink: /:collection/:path/
   portfolio:
-    output: false #true
+    output: true
     permalink: /:collection/:path/
   talks:
-    output: false #true
+    output: true
     permalink: /:collection/:path/
 
 
