--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   name             : "Mayur Mallya"
   avatar           : "pp.jpeg" #"profile.png"
   bio              : "Graduate Research student at Medical Image Analysis Lab at Simon Fraser University"
-  location         : "Metro Vancouver"
+  location         : "Metro Vancouver, BC, Canada"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.ca/citations?user=gzRUnEMAAAAJ&hl=en"
