--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : "light" (default), "dark"
+    colorscheme          : #"light" (default), "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
@@ -86,7 +86,7 @@ author:
   name             : "Mayur Mallya"
   avatar           : "pp.jpeg" #"profile.png"
   bio              : "Graduate Research student at Medical Image Analysis Lab at Simon Fraser University"
-  location         : "Metro Vancouver"
+  location         : "Metro Vancouver, Canada"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.ca/citations?user=gzRUnEMAAAAJ&hl=en"
