--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : "Mayur Mallya"
-  avatar           : "pp.jpeg" #"profile.png"
+  avatar           : "now_you_smile.jpeg" #"profile.png"
   bio              : "Graduate Research student at the Medical Image Analysis Lab of Simon Fraser University"
   location         : "Metro Vancouver, Canada"
   employer         :
