--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   flickr           :
   facebook         : "mayur.mmallya/"
   foursquare       :
-  github           : "mayurmallya"
+  #github           : "mayurmallya"
   google_plus      :
   keybase          :
   instagram        :
