--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "mayur.mmallya/"
+  #facebook         : "mayur.mmallya/"
   foursquare       :
   #github           : "mayurmallya"
   google_plus      :
