--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  gblogger         : "puddle-of-musings"
 
 
 # Reading Files
