--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  gblogger         : "puddle-of-musings.blogspot.com"
+  #gblogger         : "puddle-of-musings.blogspot.com"
 
 
 # Reading Files
