--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 author:
   name             : "Mayur Mallya"
   avatar           : "dp.jpg" #"now_you_smile.jpeg" #"profile.png"
-  bio              : "Graduate Research student at the Medical Image Analysis Lab of Simon Fraser University"
+  bio              : "Graduate Research Student at the Medical Image Analysis Lab of Simon Fraser University"
   location         : "Metro Vancouver, Canada"
   employer         :
   pubmed           : 
