--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : # "replacethistwitterhandle"
+  twitter          : "MallyaMayur"
   vine             :
   weibo            :
   xing             :
