--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ analytics:
 author:
   name             : "Mayur Mallya"
   avatar           : "dp.jpg" #"now_you_smile.jpeg" #"profile.png"
-  bio              : "Graduate Research Student at the Medical Image Analysis Lab of Simon Fraser University"
-  location         : "Metro Vancouver, Canada"
+  bio              : "PhD student at the AI in Medicine Lab at UBC"
+  location         : "Vancouver, Canada"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.ca/citations?user=gzRUnEMAAAAJ&hl=en"
