--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.ca/citations?user=gzRUnEMAAAAJ&hl=en"
-  email            : "mmallya@sfu.ca"
+  email            : "mmallya@student.ubc.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
